support edited table

--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,7 @@ meta:
     sqlite: "/Users/fancyxun/code/points/EulerDB/data/schema-euler.db"
     mysql:
         host: "127.0.0.1"
+        port: "3306"
         db: "eulerdb_schema"
         user: "root"
         passwd: "root"
